@@ -1,49 +1,50 @@
-<style type="text/css">
-	body, td {
-		font-family: arial, helvetica, sans-serif;
-		background-color: #52688D;
-		font-size: 12px;
-	}
-	table {
-		width: 100%;
-		height: 100%;
-	}
-	td {
-		text-align: center;
-	}
-	h1 {
-		color: #fff;
-		font-size: 18px;
-		font-family: trebuchet ms, arial, sans-serif;
-		margin: 0 0 10px 0;
-	}
-	form {
-		width: 300px;
-		display: block;
-		margin: 0 auto 0 auto;
-		padding: 30px;
-		border: 1px solid #95A7C4;
-	}
-	label {
-		display: block;
-		font-weight: bold;
-		text-align: left;
-		color: #ffffff;
-	}
-	input.normal {
-		display: block;
-		width: 100%;
-		margin: 0 0 10px 0;
-		color: #000;
-	}
-	input.button {
-		display: block;
-		margin: 20px auto 0 auto;
-		background-color: #7C90B0;
-		border: 1px solid #95A7C4;
-		color: #fff;
-		font-weight: bold;
-		font-size: 14px;
-		padding: 5px;
-	}
-</style>
+table {
+  width: 100%;
+  height: 100%;
+}
+td {
+  text-align: center;
+}
+h1 {
+  margin: 0 0 10px;
+  padding: 30px;
+  font-family: trebuchet ms,arial,sans-serif;
+  font-size: 18px;
+  display: block;
+  text-align: center;
+}
+div {
+  border: 1px solid #95a7c4;
+  margin: 0 auto 2pt;
+  padding: 30px;
+  width: 450px;
+  display: block;
+}
+section {
+  border: 1px solid #95a7c4;
+  margin: 0 auto;
+  padding: 30px;
+  width: 300px;
+  display: block;
+}
+label {
+  display: block;
+  font-weight: bold;
+  text-align: left;
+  color: #ffffff;
+}
+body {
+  color: #ffffff;
+  background-color: #333399;
+}
+a:visited, a:link, li {
+  background-position: left center;
+  color: #ffffff;
+  text-decoration: none;
+  text-align: left;
+  font-size: 14px;
+}
+a:hover {
+  text-decoration: none;
+  color: #cccc33;
+}
